--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,7 +188,7 @@ code,
 kbd,
 pre,
 samp {
-  font-family: monospace, monospace;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-size: 1em;
 }
 /* Forms
@@ -558,7 +558,7 @@ th {
 /* FONT PATH
  * -------------------------- */
 @font-face {
-  font-family: 'FontAwesome';
+  font-family: 'HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif';
   src: url('http://postach.io/static/themes/_assets/fontawesome/font/fontawesome-webfont.eot?v=3.1.0');
   src: url('http://postach.io/static/themes/_assets/fontawesome/font/fontawesome-webfont.eot?#iefix&v=3.1.0') format('embedded-opentype'), url('http://postach.io/static/themes/_assets/fontawesome/font/fontawesome-webfont.woff?v=3.1.0') format('woff'), url('http://postach.io/static/themes/_assets/fontawesome/font/fontawesome-webfont.ttf?v=3.1.0') format('truetype'), url('http://postach.io/static/themes/_assets/fontawesome/font/fontawesome-webfont.svg#fontawesomeregular?v=3.1.0') format('svg');
   font-weight: normal;
@@ -568,7 +568,7 @@ th {
  * -------------------------- */
 [class^="icon-"],
 [class*=" icon-"] {
-  font-family: FontAwesome;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-weight: normal;
   font-style: normal;
   text-decoration: inherit;
@@ -2486,7 +2486,7 @@ blockquote {
   font-size: 16px;
   font-size: 1rem;
   font-weight: 400;
-  font-family: "Vollkorn";
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif";
   line-height: 1.625;
 }
 blockquote cite {
@@ -2573,7 +2573,7 @@ code {
 }
 pre {
   background: #ebebeb;
-  font-family: "Courier 10 Pitch", Courier, monospace;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif", Courier, monospace;
   margin-bottom: 15px;
   margin-bottom: 0.9375rem;
   padding: 15px;
